// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContractItem should render correctly 1`] = `
<View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#FFFCFA",
        "borderColor": "#F56522",
        "borderRadius": 12,
        "borderWidth": 1,
        "opacity": 1,
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "borderRadius": 12,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": 12,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 12,
        }
      }
    >
      <View>
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              {
                "fontFamily": "Baloo2-SemiBold",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 28,
              },
            ]
          }
        >
          PC‑NAN‑NAN
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                {
                  "color": "#7D675E",
                  "fontSize": 14,
                },
              ]
            }
          >
            jan 1st, 2021
          </Text>
        </View>
      </View>
      <View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
              },
              undefined,
            ]
          }
        >
          <test-file-stub
            style={
              [
                {
                  "height": 12,
                  "marginRight": 4,
                  "marginTop": -4,
                  "width": 12,
                },
              ]
            }
          />
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                undefined,
              ]
            }
          >
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    {
                      "fontWeight": "500",
                    },
                    {
                      "color": "#EAE3DF",
                    },
                    undefined,
                  ],
                ]
              }
            >
              0
              .
              00 0
            </Text>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    {
                      "fontWeight": "500",
                    },
                    undefined,
                    {
                      "color": "#2B1911",
                    },
                  ],
                ]
              }
            >
              21 000
            </Text>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    {
                      "fontFamily": "Baloo2-Regular",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 0.14,
                      "lineHeight": 20,
                      "marginTop": 2,
                    },
                    undefined,
                    {
                      "color": "#2B1911",
                    },
                  ],
                ]
              }
            >
               
              sats
            </Text>
          </View>
        </View>
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              {
                "color": "#7D675E",
                "textAlign": "right",
              },
            ]
          }
        >
          EUR
           
          21.00
        </Text>
      </View>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderBottomLeftRadius": 8,
            "borderBottomRightRadius": 8,
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingBottom": 8,
            "paddingTop": 8,
          },
          {
            "backgroundColor": "#F56522",
          },
        ]
      }
    >
      <test-file-stub
        fill="#FFFCFA"
        style={
          [
            {
              "height": 24,
              "width": 24,
            },
            {
              "marginRight": 4,
              "marginTop": -2,
              "width": 16,
            },
          ]
        }
      />
      <Text
        allowFontScaling={false}
        style={
          [
            {
              "color": "#2B1911",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            [
              {
                "fontWeight": "600",
              },
              {
                "color": "#FFFCFA",
              },
            ],
          ]
        }
      >
        make payment
      </Text>
    </View>
  </View>
</View>
`;

exports[`ContractItem should render correctly with past contract 1`] = `
<View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#FFFCFA",
        "borderColor": "#88E2B7",
        "borderRadius": 12,
        "borderWidth": 1,
        "opacity": 1,
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "borderRadius": 12,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": 12,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 12,
        }
      }
    >
      <View>
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              {
                "fontFamily": "Baloo2-SemiBold",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 28,
              },
            ]
          }
        >
          PC‑NAN‑NAN
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              {
                "marginRight": 4,
              }
            }
          >
            <test-file-stub
              fill="#88E2B7"
              style={
                [
                  {
                    "height": 24,
                    "width": 24,
                  },
                  {
                    "height": 16,
                    "width": 16,
                  },
                ]
              }
            />
          </View>
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                {
                  "color": "#7D675E",
                  "fontSize": 14,
                },
              ]
            }
          >
            jan 1st, 2021
          </Text>
        </View>
      </View>
      <View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
              },
              undefined,
            ]
          }
        >
          <test-file-stub
            style={
              [
                {
                  "height": 12,
                  "marginRight": 4,
                  "marginTop": -4,
                  "width": 12,
                },
              ]
            }
          />
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                undefined,
              ]
            }
          >
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    {
                      "fontWeight": "500",
                    },
                    {
                      "color": "#EAE3DF",
                    },
                    undefined,
                  ],
                ]
              }
            >
              0
              .
              00 0
            </Text>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    {
                      "fontWeight": "500",
                    },
                    undefined,
                    {
                      "color": "#2B1911",
                    },
                  ],
                ]
              }
            >
              21 000
            </Text>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    {
                      "fontFamily": "Baloo2-Regular",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 0.14,
                      "lineHeight": 20,
                      "marginTop": 2,
                    },
                    undefined,
                    {
                      "color": "#2B1911",
                    },
                  ],
                ]
              }
            >
               
              sats
            </Text>
          </View>
        </View>
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              {
                "color": "#7D675E",
                "textAlign": "right",
              },
            ]
          }
        >
          EUR
           
          21.00
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`ContractItem should render correctly with unread messages 1`] = `
<View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#FFFCFA",
        "borderColor": "#F56522",
        "borderRadius": 12,
        "borderWidth": 1,
        "opacity": 1,
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "borderRadius": 12,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": 12,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 12,
        }
      }
    >
      <View>
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              {
                "fontFamily": "Baloo2-SemiBold",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 28,
              },
            ]
          }
        >
          PC‑NAN‑NAN
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                {
                  "color": "#7D675E",
                  "fontSize": 14,
                },
              ]
            }
          >
            jan 1st, 2021
          </Text>
        </View>
      </View>
      <View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
              },
              undefined,
            ]
          }
        >
          <test-file-stub
            style={
              [
                {
                  "height": 12,
                  "marginRight": 4,
                  "marginTop": -4,
                  "width": 12,
                },
              ]
            }
          />
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                undefined,
              ]
            }
          >
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    {
                      "fontWeight": "500",
                    },
                    {
                      "color": "#EAE3DF",
                    },
                    undefined,
                  ],
                ]
              }
            >
              0
              .
              00 0
            </Text>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    {
                      "fontWeight": "500",
                    },
                    undefined,
                    {
                      "color": "#2B1911",
                    },
                  ],
                ]
              }
            >
              21 000
            </Text>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    {
                      "fontFamily": "Baloo2-Regular",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 0.14,
                      "lineHeight": 20,
                      "marginTop": 2,
                    },
                    undefined,
                    {
                      "color": "#2B1911",
                    },
                  ],
                ]
              }
            >
               
              sats
            </Text>
          </View>
        </View>
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              {
                "color": "#7D675E",
                "textAlign": "right",
              },
            ]
          }
        >
          EUR
           
          21.00
        </Text>
      </View>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderBottomLeftRadius": 8,
            "borderBottomRightRadius": 8,
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingBottom": 8,
            "paddingTop": 8,
          },
          {
            "backgroundColor": "#F56522",
          },
        ]
      }
    >
      <test-file-stub
        fill="#FFFCFA"
        style={
          [
            {
              "height": 24,
              "width": 24,
            },
            {
              "marginRight": 4,
              "marginTop": -2,
              "width": 16,
            },
          ]
        }
      />
      <Text
        allowFontScaling={false}
        style={
          [
            {
              "color": "#2B1911",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            [
              {
                "fontWeight": "600",
              },
              {
                "color": "#FFFCFA",
              },
            ],
          ]
        }
      >
        make payment
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "bottom": 0,
        "marginBottom": 2,
        "paddingBottom": 8,
        "paddingLeft": 12,
        "paddingRight": 12,
        "paddingTop": 8,
        "position": "absolute",
        "right": 0,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          },
          undefined,
        ]
      }
    >
      <test-file-stub
        fill="#FFFCFA"
        style={
          [
            {
              "height": 24,
              "width": 24,
            },
            {
              "height": "100%",
              "width": "100%",
            },
          ]
        }
      />
      <Text
        allowFontScaling={false}
        ellipsizeMode="clip"
        numberOfLines={1}
        style={
          [
            {
              "color": "#2B1911",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            [
              {
                "color": "#F56522",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 14,
                "fontWeight": "bold",
                "letterSpacing": 0.14,
                "lineHeight": 20,
                "paddingBottom": 2,
                "position": "absolute",
                "textAlign": "center",
              },
              [
                {
                  "color": "#F56522",
                },
                {
                  "paddingLeft": 2,
                  "paddingTop": 4,
                },
              ],
            ],
          ]
        }
      >
        1
      </Text>
    </View>
  </View>
</View>
`;
